force-app/main/default/objects/Plan_Agent_Config__mdt/Plan_Agent_Config__mdt.object-meta.xml
<CustomObject>
    <description>Per-tool (optionally per-customer) runtime config for the Ohanafy Plan agent. Read by the Apex gateway and the web-app dispatcher to enable/disable tools and apply rate limits without a redeploy.</description>
    <label>Plan Agent Config</label>
    <pluralLabel>Plan Agent Configs</pluralLabel>
</CustomObject>