force-app/main/default/objects/Plan_Agent_Config__mdt/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>Optional per-customer override. Blank = record applies to all customers (default). Set to an org id to carve out a customer-specific enable/limit.</description>
    <label>Customer Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>