force-app/main/default/objects/Plan_Agent_Config__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Kill switch — when false, the tool rejects calls at the gateway without invoking downstream.</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>