force-app/main/default/objects/Plan_Agent_Config__mdt/fields/Rate_Limit_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_Per_Hour__c</fullName>
    <description>Max calls per hour per customer. Null = no per-tool cap (defer to global defaults in the web-app).</description>
    <label>Rate Limit Per Hour</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>