force-app/main/default/objects/Plan_Agent_Config__mdt/fields/Tool_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Tool_API_Name__c</fullName>
    <description>Canonical snake_case tool name. Must match a member of OhfyPlanMcpGateway.ALLOWED_TOOLS.</description>
    <label>Tool API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>